--- a/Web.html
+++ b/Web.html
@@ -51,7 +51,7 @@
         .header {
             display: flex;
             align-items: center;
-            margin-top: 60px;
+            margin-top: 0px;
         }
         .header img {
             width: 50px;
@@ -60,21 +60,24 @@
         }
         .header h1 {
             margin: 0;
-            font-size: 36px;
+            font-size: 66px;
         }
         .info-container {
             display: flex;
             justify-content: space-around;
             width: 100%;
-            margin-top: 20px;
+            margin-top: 40px;
         }
         .info {
             text-align: center;
+            font-weight: bold;
         }
         .info p {
             margin: 0;
-            font-size: 24px;
+            font-size: 28px;
+            
         }
+
         .lower-part {
             flex: 1;
             background-color: white;
@@ -84,10 +87,10 @@
         }
         .top-section {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             width: 100%;
-            height: 50px; /* Adjust height as needed */
+            height: 250px; /* Adjust height as needed */
             padding: 20px;
         }
         .navigate-button {
@@ -97,9 +100,21 @@
             color: white;
             border: none;
             cursor: pointer;
+            margin-bottom: 20px;
         }
         .navigate-button:hover {
             background-color: #007BB5;
+        }
+        .add-device-button {
+            padding: 15px 30px;
+            font-size: 24px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        .add-device-button:hover {
+            background-color: #218838;
         }
         .bottom-section {
             display: flex;
@@ -163,7 +178,8 @@
         </div>
         <div class="lower-part">
             <div class="top-section">
-                <button class="navigate-button" onclick="window.location.href='Next.html'">Go to Another Page</button>
+                <button class="navigate-button" onclick="window.location.href='Next.html'"> Device 1: Smart Water Heater </button>
+                <button class="add-device-button">+ Add Device</button>
             </div>
             <div class="bottom-section">
                 <button class="button">
